--- a/Business.Entities/Business.Entities.csproj
+++ b/Business.Entities/Business.Entities.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E00FC9E-248B-4C05-BEE4-2375C14162FD}</ProjectGuid>
+    <ProjectGuid>{3D309BD0-2780-4DEF-A209-899A7737E039}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Negocio</RootNamespace>
-    <AssemblyName>Negocio</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>Business.Entities</RootNamespace>
+    <AssemblyName>Business.Entities</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,9 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntidadNegocio.cs" />
+    <Compile Include="AlumnoInscripcion.cs" />
+    <Compile Include="Comision.cs" />
+    <Compile Include="Curso.cs" />
+    <Compile Include="DocenteCurso.cs" />
+    <Compile Include="BusinessEntity.cs" />
+    <Compile Include="Especialidad.cs" />
+    <Compile Include="Materia.cs" />
     <Compile Include="Modulo.cs" />
     <Compile Include="ModuloUsuario.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
