--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -1,6 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    </startup>
+  <connectionStrings>
+    <add name="ConnStringLocal"
+    providerName="System.Data.SqlClient"
+    connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"/>
+    <add name="ConnStringExpress"
+    providerName="System.Data.SqlClient"
+    connectionString="Server=localhost\SQLEXPRESS;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnm"/>
+    <add name="ConnStringServerISI"
+    providerName="System.Data.SqlClient"
+    connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"/>
+  </connectionStrings>
 </configuration>
