--- a/UI.Consola/UI.Consola.csproj
+++ b/UI.Consola/UI.Consola.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Usuarios.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business.Entities\Business.Entities.csproj">
