--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -6,7 +6,7 @@
     connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"/>
     <add name="ConnStringExpress"
     providerName="System.Data.SqlClient"
-    connectionString="Server=localhost\SQLEXPRESS;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnm"/>
+    connectionString="Server=ATOM\SQLEXPRESS;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnm"/>
     <add name="ConnStringServerISI"
     providerName="System.Data.SqlClient"
     connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"/>
