Hice el loguin, cree un metodo GetOneUser para buscar un usuario por nombre de usuario. Recuerden que tienen que tener un usuario en la base de datos para loguearse.

--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -6,7 +6,7 @@
     connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"/>
     <add name="ConnStringExpress"
     providerName="System.Data.SqlClient"
-    connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"/>
+    connectionString="Server=EMICORTEZ-HP\SQLEXPRESS;Database=Academia;Integrated Security=false; User=sa; Password=435786"/>
     <add name="ConnStringServerISI"
     providerName="System.Data.SqlClient"
     connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"/>
