--- a/Data.Database/Data.Database.csproj
+++ b/Data.Database/Data.Database.csproj
@@ -81,6 +81,10 @@
       <Project>{3d309bd0-2780-4def-a209-899a7737e039}</Project>
       <Name>Business.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Util\Util.csproj">
+      <Project>{c1c66274-4c71-4a3c-81fc-efc93455f569}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
