--- a/Business.Logic/Business.Logic.csproj
+++ b/Business.Logic/Business.Logic.csproj
@@ -45,7 +45,7 @@
     <Compile Include="EspecialidadLogic.cs" />
     <Compile Include="PlanLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsuarioLogic.cs" />
+    <Compile Include="PersonaLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business.Entities\Business.Entities.csproj">
