--- a/Data.Database/Data.Database.csproj
+++ b/Data.Database/Data.Database.csproj
@@ -63,7 +63,7 @@
     <Compile Include="ComisionAdapter.cs" />
     <Compile Include="EspecialidadAdapter.cs" />
     <Compile Include="PlanAdapter.cs" />
-    <Compile Include="UsuarioAdapter.cs" />
+    <Compile Include="PersonaAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
