--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -100,6 +100,12 @@
     <Compile Include="OlvidoContrasenia.Designer.cs">
       <DependentUpon>OlvidoContrasenia.cs</DependentUpon>
     </Compile>
+    <Compile Include="Planes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Planes.Designer.cs">
+      <DependentUpon>Planes.cs</DependentUpon>
+    </Compile>
     <Compile Include="UsuarioDesktop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OlvidoContrasenia.resx">
       <DependentUpon>OlvidoContrasenia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Planes.resx">
+      <DependentUpon>Planes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UsuarioDesktop.resx">
       <DependentUpon>UsuarioDesktop.cs</DependentUpon>
