agregadas notificaciones que avisan cuando se borra una especialidad que tambien se borran los planes y personas lo mismo para planes

--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -5,9 +5,12 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=EMICORTEZ-HP\SQLCORTEZ;Database=Academia;Integrated Security=false; User=emiliano; Password=435786"
+    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
+      providerName="System.Data.SqlClient" />
+    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString"
+      connectionString="Data Source=localhost;Initial Catalog=Academia;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
