arreglado boton cancelar de EspecialidadDesktop

--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -5,12 +5,12 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
+    <add name="ConnStringExpress" connectionString="Server=ANDRÉS;Database=Academia;Integrated Security=false; User=sa; Password=andres"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
     <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString"
-      connectionString="Data Source=localhost;Initial Catalog=Academia;Integrated Security=True"
+      connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
