--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -95,7 +95,9 @@
     <Compile Include="OlvidoContrasenia.Designer.cs">
       <DependentUpon>OlvidoContrasenia.cs</DependentUpon>
     </Compile>
-    <Compile Include="PlanDesktop.cs" />
+    <Compile Include="PlanDesktop.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="PlanDesktop.Designer.cs">
       <DependentUpon>PlanDesktop.cs</DependentUpon>
     </Compile>
