--- a/Data.Database/Data.Database.csproj
+++ b/Data.Database/Data.Database.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Adapter.cs" />
     <Compile Include="ComisionAdapter.cs" />
+    <Compile Include="CursoAdapter.cs" />
     <Compile Include="EspecialidadAdapter.cs" />
     <Compile Include="PlanAdapter.cs" />
     <Compile Include="PersonaAdapter.cs" />
