--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -5,7 +5,7 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=ANDRÉS;Database=Academia;Integrated Security=false; User=sa; Password=andresdlg"
+    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
