--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -4,6 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
@@ -16,7 +17,15 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <siteMap>
+      <providers>
+        <clear/>
+        <add siteMapFile="web.sitemap" name="AspNetXmlSiteMapProvider"
+            type="System.Web.XmlSiteMapProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </providers>
+    </siteMap>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+
   </system.web>
 </configuration>
