semi arreglado el tema de la carga de la fecha

--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -17,6 +17,15 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="Login.aspx" name=".ASPXFORMSAUTH">
+      </forms>
+    </authentication>
+
+    <authorization>
+      <deny users="?" />
+    </authorization>
+    
     <siteMap>
       <providers>
         <clear/>
