Agregado ABM Especialidades

--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -8,7 +8,7 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
+    <add name="ConnStringExpress" connectionString="Server=ANDRÉS;Database=Academia;Integrated Security=false; User=sa; Password=andresdlg"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
