Porta tiene las horas contadas

--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -1,40 +1,72 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
+  <configSections>
+    <section name="ActiveReports9" type="GrapeCity.ActiveReports.Web.ActiveReportsSettingsSection" />
+  </configSections>
   <connectionStrings>
-    <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
-      providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
-      providerName="System.Data.SqlClient" />
-    <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
-      providerName="System.Data.SqlClient" />
-    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString"
-      connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;" providerName="System.Data.SqlClient" />
+    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM" providerName="System.Data.SqlClient" />
+    <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;" providerName="System.Data.SqlClient" />
+    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString" connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="Login.aspx" name=".ASPXFORMSAUTH">
-      </forms>
+      <forms loginUrl="Login.aspx" name=".ASPXFORMSAUTH" />
     </authentication>
-
     <authorization>
       <deny users="?" />
     </authorization>
-    
     <siteMap>
       <providers>
-        <clear/>
-        <add siteMapFile="web.sitemap" name="AspNetXmlSiteMapProvider"
-            type="System.Web.XmlSiteMapProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <clear />
+        <add siteMapFile="web.sitemap" name="AspNetXmlSiteMapProvider" type="System.Web.XmlSiteMapProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </providers>
     </siteMap>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Export.Xaml.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=CC4967777C49A3FF" />
+        <add assembly="GrapeCity.ActiveReports.Export.Document.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=CC4967777C49A3FF" />
+        <add assembly="GrapeCity.ActiveReports.Export.Pdf.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Export.Html.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Export.Image.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Export.Rdf.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=CC4967777C49A3FF" />
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="GrapeCity.ActiveReports.Extensibility.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Diagnostics.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Chart.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.Document.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="GrapeCity.ActiveReports.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+        <add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5.2" />
-
+    <httpHandlers>
+      <add verb="*" path="*.asmx" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
+      <add verb="*" path="*.ar9" type="GrapeCity.ActiveReports.Web.Handlers.ReportBinariesStreamer, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+      <add verb="*" path="*.ActiveReport" type="GrapeCity.ActiveReports.Web.Handlers.CompiledReportHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+      <add verb="*" path="*.rpx" type="GrapeCity.ActiveReports.Web.Handlers.RpxHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+      <add verb="*" path="*.rdl,*.rdlx" type="GrapeCity.ActiveReports.Web.Handlers.RdlxHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+      <add verb="*" path="*.ar9Web" type="GrapeCity.ActiveReports.Web.Handlers.WebCacheAccessHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" />
+    </httpHandlers>
   </system.web>
+  <ActiveReports9>
+    <WebService reportsFolder="~/" assemblyFolder="~/" />
+  </ActiveReports9>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <add verb="*" path="*.asmx" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" name="AsmxHandler" resourceType="Unspecified" preCondition="integratedMode" />
+      <add verb="*" path="*.ar9" type="GrapeCity.ActiveReports.Web.Handlers.ReportBinariesStreamer, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" name="AR9_ReportBinariesStreamer" resourceType="Unspecified" preCondition="integratedMode" />
+      <add verb="*" path="*.ActiveReport" type="GrapeCity.ActiveReports.Web.Handlers.CompiledReportHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" name="AR9_CompiledReportHandler" resourceType="Unspecified" preCondition="integratedMode" />
+      <add verb="*" path="*.rpx" type="GrapeCity.ActiveReports.Web.Handlers.RpxHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" name="AR9_RpxHandler" resourceType="Unspecified" preCondition="integratedMode" />
+      <add verb="*" path="*.rdl,*.rdlx" type="GrapeCity.ActiveReports.Web.Handlers.RdlxHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" name="AR9_RdlxHandler" resourceType="Unspecified" preCondition="integratedMode" />
+      <add verb="*" path="*.ar9Web" type="GrapeCity.ActiveReports.Web.Handlers.WebCacheAccessHandler, GrapeCity.ActiveReports.Web.v9, Version=9.4.4600.0, Culture=neutral, PublicKeyToken=cc4967777c49a3ff" name="AR9_WebCacheAccessHandler" resourceType="Unspecified" preCondition="integratedMode" />
+    </handlers>
+  </system.webServer>
 </configuration>
