--- a/UI.Desktop/App.config
+++ b/UI.Desktop/App.config
@@ -1,16 +1,12 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
-      providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
-      providerName="System.Data.SqlClient" />
-    <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
-      providerName="System.Data.SqlClient" />
-    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString"
-      connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;" providerName="System.Data.SqlClient"/>
+    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM" providerName="System.Data.SqlClient"/>
+    <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;" providerName="System.Data.SqlClient"/>
+    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString" connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="UI.Desktop.Properties.Settings.AcademiaConnectionString1" connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Persist Security Info=True;User ID=sa;Password=andresdlg" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
