--- a/UI.Desktop/Properties/Settings.settings
+++ b/UI.Desktop/Properties/Settings.settings
@@ -5,10 +5,18 @@
     <Setting Name="AcademiaConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=localhost;Initial Catalog=Academia;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=Academia;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="AcademiaConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=ANDRÉS;Initial Catalog=Academia;Persist Security Info=True;User ID=sa;Password=andresdlg&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=ANDRÉS;Initial Catalog=Academia;Persist Security Info=True;User ID=sa;Password=andresdlg</Value>
     </Setting>
   </Settings>
 </SettingsFile>
