Cambios en la interfaz de menu en winform

--- a/UI.Desktop/UI.Desktop.csproj
+++ b/UI.Desktop/UI.Desktop.csproj
@@ -250,6 +250,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\LogoIconoUTN.png" />
+    <Content Include="Resources\pantalla inicio.jpg" />
+    <Content Include="Resources\utn.ico" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
