movidos reportes a carpeta Reportes agregadas todas las opciones del sitemap

--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -16,7 +16,14 @@
       connectionString="Data Source=ANDRÉS;Initial Catalog=Academia;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <system.web>
+    
+    <system.web>
+        <sessionState
+            mode="SQLServer"
+            sqlConnectionString="Server=localhost;Integrated Security=false; User=joaco; Password=zxcvbnM"
+            cookieless="false"
+            timeout="20"
+            />
     <authentication mode="Forms">
       <forms loginUrl="Login.aspx" name=".ASPXFORMSAUTH">
       </forms>
