--- a/UI.Web/UI.Web.csproj
+++ b/UI.Web/UI.Web.csproj
@@ -125,10 +125,10 @@
     <Compile Include="Cursos.aspx.designer.cs">
       <DependentUpon>Cursos.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CursosReport.cs">
+    <Compile Include="Reportes\CursosReport.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CursosReport.Designer.cs">
+    <Compile Include="Reportes\CursosReport.Designer.cs">
       <DependentUpon>CursosReport.cs</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
@@ -170,10 +170,10 @@
       <DependentUpon>Planes.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PlanesReport.cs">
+    <Compile Include="Reportes\PlanesReport.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="PlanesReport.Designer.cs">
+    <Compile Include="Reportes\PlanesReport.Designer.cs">
       <DependentUpon>PlanesReport.cs</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
@@ -210,11 +210,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="CursosReport.resx">
+    <EmbeddedResource Include="Reportes\CursosReport.resx">
       <DependentUpon>CursosReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="licenses.licx" />
-    <EmbeddedResource Include="PlanesReport.resx">
+    <EmbeddedResource Include="Reportes\PlanesReport.resx">
       <DependentUpon>PlanesReport.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
