abm cargar notas, falta pulirlo

--- a/Business.Entities/Business.Entities.csproj
+++ b/Business.Entities/Business.Entities.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Curso.cs" />
     <Compile Include="DocenteCurso.cs" />
     <Compile Include="BusinessEntity.cs" />
+    <Compile Include="docenteCursos.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="Materia.cs" />
     <Compile Include="Modulo.cs" />
