--- a/Data.Database/Data.Database.csproj
+++ b/Data.Database/Data.Database.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Adapter.cs" />
     <Compile Include="ComisionAdapter.cs" />
     <Compile Include="CursoAdapter.cs" />
+    <Compile Include="docenteCursoAdapter.cs" />
     <Compile Include="EspecialidadAdapter.cs" />
     <Compile Include="InscripcionAlumnoAdapter.cs" />
     <Compile Include="MateriaAdapter.cs" />
