pequeño arreglo del rol

--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -8,7 +8,7 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=ANDRÉS;Database=Academia;Integrated Security=false; User=sa; Password=andresdlg"
+    <add name="ConnStringExpress" connectionString="Server=EMICORTEZ-HP\SQLCORTEZ;Database=Academia;Integrated Security=false; User=emiliano; Password=435786"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
@@ -20,7 +20,7 @@
     <system.web>
         <sessionState
             mode="InProc"
-            sqlConnectionString="Server=localhost;Integrated Security=false; User=sa; Password=andresdlg"
+            sqlConnectionString="Server=localhost;Integrated Security=false; User=emiliano; Password=435786"
             cookieless="false"
             timeout="20"
             />
