--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -8,7 +8,7 @@
   <connectionStrings>
     <add name="ConnStringLocal" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
-    <add name="ConnStringExpress" connectionString="Server=localhost;Database=Academia;Integrated Security=false; User=joaco; Password=zxcvbnM"
+    <add name="ConnStringExpress" connectionString="Server=MS-10\UTNFRRO;Database=Academia;Integrated Security=false; User=net; Password=net"
       providerName="System.Data.SqlClient" />
     <add name="ConnStringServerISI" connectionString="Server=serverisi; Database=Academia; Integrated Security=false; User=net; Password=net;"
       providerName="System.Data.SqlClient" />
@@ -20,7 +20,7 @@
     <system.web>
         <sessionState
             mode="InProc"
-            sqlConnectionString="Server=localhost;Integrated Security=false; User=emiliano; Password=435786"
+            sqlConnectionString="Server=MS-10\UTNFRRO;Integrated Security=false; User=net; Password=net"
             cookieless="false"
             timeout="20"
             />
