--- a/UI.Web/Web.config
+++ b/UI.Web/Web.config
@@ -29,7 +29,7 @@
       <forms loginUrl="Login.aspx" name=".ASPXFORMSAUTH">
       </forms>
     </authentication>
-
+    
     <authorization>
       <deny users="?" />
     </authorization>
@@ -45,4 +45,13 @@
     <httpRuntime targetFramework="4.5.2" />
 
   </system.web>
+    
+    <location path="OlvidoContrasenia.aspx">
+	  	<system.web>
+	    	<authorization>
+	    		<allow users ="*" />
+	    	</authorization>
+	  	</system.web>
+		</location>
+
 </configuration>
